# bno055-i2c

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
example/: Makefile
example/htdocs/: index.html
example/src/: main.c
src/: bno055-i2c.c  bno055-i2c.h
